syntax = "proto3";

option csharp_namespace = "Caiju.TeenKom.Blitzjob.AppServer.Protos.Server";

package teenkonfcm;




service TeenKonFCM{
	rpc NewAssignmentRequest (NewAssignmentReq) returns (DefaultRes);
	rpc NewReviewRequest (NewAssignmentReq) returns (DefaultRes);
}

message NewAssignmentReq{
	uint32 job_id = 1;
	uint32 user_id = 2;
}

message NewReviewReq{
	uint32 user_id = 1;
}

message DefaultRes{
	bool success = 1;
}